--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -210,7 +210,7 @@ svg{
 }
 
 body{
-        background-color:#F9F7FF !important;
+        background-color:#FFF !important;
         color: var(--black-main) !important;
 }
 
@@ -1152,6 +1152,49 @@ button{
                                 margin-right: -16px ;
                         }
                         
+                }
+        }
+
+        .our_qoute{
+                padding: 180px 120px;
+                margin-top: 30vh;
+                background-color: #f9f2f0;
+
+                margin-left: -28px ;
+                margin-right: -28px ;
+
+                h4{
+                        margin-bottom: 34px;
+                }
+
+                span{
+                        position: relative;
+                        top: 10px;
+                        left: -60px;
+                        font-size: 54px;
+                }
+
+                hr{
+                        position: relative;
+                        margin-top: -34px;
+                        margin-bottom: 34px;
+                        border: 0;
+                        height: 1px;
+                        background-color: var(--black-main);
+                }
+                
+                @media screen and (max-width:900px) {
+                        margin-left: -16px ;
+                        margin-right: -16px ;
+                        padding: 128px 32px;
+
+                        hr{
+                                left: 10%;
+                        }
+                        span{
+                                left: -4%;
+                        }
+        
                 }
         }
 }
