landing page lvl5

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1197,4 +1197,9 @@ button{
         
                 }
         }
+
+        .pricing_plans{
+                margin-top: 30vh;
+                
+        }
 }
